style: fixe scrollbar style

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -157,3 +157,17 @@ body {
   max-width: 1900px;
   margin-inline: auto;
 }
+
+*::-webkit-scrollbar {
+  width: 10px;
+  background-color: var(--color-accent-100);
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem;
+  background-color: var(--color-accent-500);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent-600);
+}
